--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         
                             <p> The Akan Names are derived from ghanian culture, where children are given names based on the days of the week.</p>
                             <p>In West Africa, newborns are given <em> special names</em> depending on the day they are born. Diverse ethnicities 
-                                have variants and meanings as a symbol of cultural integrity and ancestral affiliation. </p>
+                                have variants and meanings as a symbol of cultural integrity and ancestral affilliation. </p>
                                 </div>
                         <div class="row">
                             <div class="column">
