--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,71 +6,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="x-UA-Compatible" content="ie=edge">
     <title>Akan Names</title>
-
+    <link href="Bootstrap v4.4.1 (https://getbootstrap.com/)">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="jumbotron">
+        <!--
         <div class="row">
-            <div class="col-sm-12 col-md-12">
+        -->
 
-                <div>
-                    <div class="bg-img">
-                        <h2>Akan Name Generator</h2>
-                        <p> The Akan people are a historically important ethnic group of <em>West Africa</em>.
-                            <br> With over 20 million members the Akans are one of the biggest
-                            <br>Ethnic groups in West Africa today.
-                            <br> The Akan are the largest ethnic group in both Ghana and the Ivory Coast.
-                            <br>They speak <em>kwa </em>languages which are part of the larger Niger-Congo family.</p>
-                        <p> The Akan Names are derived from ghanian culture,
-                            <br> where children are given names based on the days of the week.</p>
-                        <p>In West Africa, newborns are given <em> special names</em>
-                            <br> depending on the day they are born.
-                            <br> Diverse ethnicities have variants and meanings
-                            <br>as a symbol of cultural integrity and ancestral affiliation. </p>
-                        <h2>Please put your details below: </h2>
+        <div class="col-sm-12 col-md-12">
 
-                        <div class="set" align="left">
-                            <label>Century</label>
-                            <br/>
-                            <input type="text" id="Century" placeholder="Century in digits" required/>
-                            <br/>
-                            <br/>
-                            <label>Year</label>
-                            <br/>
-                            <input type="text" id="year" placeholder="Year in digits" required/>
-                            <br/>
-                            <br/>
-                            <label>Month</label>
-                            <br/>
-                            <input type="text" id="month" placeholder="Month in digits" required />
-                            <br/>
-                            <br/>
-                            <label>Day</label>
-                            <br/>
-                            <input type="text" id="day" placeholder="Day in digits" required />
-                            <br />
-                            <br/>
-                            <label>Gender</label>
-                            <br/>
-                            <input type="radio" name="gender" id="gender" value="male" checked/> Male
-                            <br />
-                            <input type="radio" name="gender" id="gender" value="female" checked/> Female
-                            <br />
-                            <br />
-                            <input type="submit" class="btn-1" value="Submit" onclick="output()" />
-                            <div id="outcome"></div>
-                        </div>
+            <div>
+                <div class="bg-img">
+                    <h2>Akan Name Generator</h2>
+                    <p> The Akan people are a historically important ethnic group of <em>West Africa</em>.
+                        <br> With over 20 million members the Akans are one of the biggest
+                        <br>Ethnic groups in West Africa today.
+                        <br> The Akan are the largest ethnic group in both Ghana and the Ivory Coast.
+                        <br>They speak <em>kwa </em>languages which are part of the larger Niger-Congo family.</p>
+                    <p> The Akan Names are derived from ghanian culture,
+                        <br> where children are given names based on the days of the week.</p>
+                    <p>In West Africa, newborns are given <em> special names</em>
+                        <br> depending on the day they are born.
+                        <br> Diverse ethnicities have variants and meanings
+                        <br>as a symbol of cultural integrity and ancestral affiliation. </p>
+                    <h2>Please put your details below: </h2>
+
+                    <div class="set" align="center">
+                        <label>Century</label>
+                        <br/>
+                        <input type="text" id="Century" placeholder="Century in digits" required/>
+                        <br/>
+                        <br/>
+                        <label>Year</label>
+                        <br/>
+                        <input type="text" id="year" placeholder="Year in digits" required/>
+                        <br/>
+                        <br/>
+                        <label>Month</label>
+                        <br/>
+                        <input type="text" id="month" placeholder="Month in digits" required />
+                        <br/>
+                        <br/>
+                        <label>Day</label>
+                        <br/>
+                        <input type="text" id="day" placeholder="Day in digits" required />
+                        <br />
+                        <br/>
+                        <label>Gender</label>
+                        <br/>
+                        <input type="radio" name="gender" id="gender" value="male" checked/> Male
+                        <br />
+                        <input type="radio" name="gender" id="gender" value="female" checked/> Female
+                        <br />
+                        <br />
+                        <input type="submit" class="btn-1" value="Submit" onclick="output()" />
+                        <div id="outcome"></div>
                     </div>
-
-                    <p id="display"></p>
                 </div>
-                <div class="image">
-                    <img src="image.jpeg/akan2img.jpg" alt="a lady img" style="width: 50%" height="750px">
-                </div>
-                <img src="image.jpeg/gh-flag.jpeg" alt="ghana-flag" style="width: 50%; height: 750px"><img src="image.jpeg/akan-img.jpeg" alt="ghanian-people" style="width: 50%; height: 750px">
 
+                <p id="display"></p>
+            </div>
+
+            <div class="image">
+                <img src="image.jpeg/ghana-flag2.jpg" alt="ghana-flag" style="width: 40%" height="100%px">
+            </div>
+            <div class="img">
+                <img src="image.jpeg/african-map.jpg" alt="african-map" style="width: 45%; height: 90%px"><img src="image.jpeg/art-image.jpg" style="width: 650px; height: 320px;">
+            </div>
+
+        </div>
+
+        <!--
                 <footer id="footer">
 
                     <h4>Posted by: Halima Isack</h4>
@@ -80,25 +88,15 @@
 
                     <h4>Kindly like us on:</h4>
                     <ul>
-                        <li><img src="image.jpeg/facebookimg.jpg"></li>
+                        <li><img src="image.jpeg/"></li>
                         <h4>Please follow us on:</h4>
                         <li><img src="image.jpeg/twitter-img.jpg"></li>
 
                     </ul>
-            </div>
-        </div>
-    </div>
-    </div>
-    </footer>
+                </footer>
 
-    </div>
-    </div>
-
-    </div>
-    </div>
-    </div>
-
-    <script src="akan.js"></script>
+            -->
+        <script src="akan.js"></script>
 
 </body>
 
