--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             </div>
 <!--
             <div class="image">
-                <img src="image.jpeg/ghana-flag2.jpg" alt="ghana-flag" style="width: 40%" height="100%px">
+                <img src="image.jpeg/ghana-flag2.jpg" style="width: 40%" height="100%px">
             </div>
             <div class="img">
-                <img src="image.jpeg/african-map.jpg" alt="african-map" style="width: 45%; height: 90%px"><img src="image.jpeg/art-image.jpg" style="width: 650px; height: 320px;">
+                <img src="image.jpeg/african-map.jpg" style="width: 45%; height: 90%px"><img src="image.jpeg/art-image.jpg" style="width: 650px; height: 320px;">
             </div>
 
         </div>
